(Format: Year/Month/Day)
Changes for 0.9.3:
*03/05/19:
   * Fixed minor bug in bsetroot (Henrik)
     bsetroot.cc
   * Add back some Xinerama support (still need placement + maximise) (Simon)
     Screen.hh/cc Toolbar.cc Slit.cc Xinerama.hh
   * Fix bsetroot segfault (Simon)
     FbWindow.cc
*03/05/18:
   * Moved Resource.hh/cc, DirHelper.hh/cc and 
     XrmDatabaseHelper.hh to FbTk (Henrik)
	 Screen.hh/cc, fluxbox.hh/cc, IntResMenuItem.hh/cc
*03/05/17:
   * Fixed autohide bug in toolbar (Thanks MrChuoi)
     Toolbar.cc, ArrowButton.hh/cc
   * Fixed slit client bug (Thanks MrChuoi)
     Slit.cc
   * Fixed cursor for grips (Thanks MrChuoi)
     Window.cc
   * Fixed minor bug in FbTk::EventManager (Thanks MrChuoi)
     FbTk/EventManager.cc
*03/05/16:
   * Fixed logging file and better info message (Henrik)
     New argument to fluxbox -log <filename>
	 main.cc
*03/05/14:
   * Fixed Shape events, this fixes some decor issues with gkrellm and xmms (Henrik)
     Window.cc/hh, fluxbox.cc/hh
   * Fixed crash bug when client died and clientlist wasn't updated (Henrik)
     WinClient.hh/cc, Screen.cc, Workspace.hh, fluxbox.cc
*03/05/13:
   * Fixed transparent slit and minor bug in transparent (Henrik)
     Slit.cc, Screen.hh/cc, Transparent.cc
   * Fixed Slit redraw bug (Henrik)
     Slit.cc
   * Removed ScreenInfo.hh/cc (Henrik)
   * Fixed better error msg for display connection (Henrik)
     fluxbox.cc
   * Fix saving of Workspace Icons Toolbar mode (Simon)
     Screen.cc
   * Fixed iconify problems when autoraise on (Simon)
     Window.cc Screen.cc
   * Fixed restoring submenus after a reconfigure (Thanks MrChuoi)
     Screen.cc, fluxbox.cc/hh
   * Added auto hide menu item to toolbar menu (Thanks MrChuoi)
     Toolbar.cc
*03/05/12:
   * Fixed basic RANDR support  (Henrik)
     Resizes toolbar and slit when root window size changes.
     Screen.hh/cc, FbRootWindow.hh/cc, FbTk/FbWindow.hh
     fluxbox.cc/hh
*03/05/11:
   * Fixed dangling m_focused_window pointer, 